<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/logo_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingHorizontal="30dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/logo_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="btn_news, btn_settings, btn_statistics, btn_tables"
            app:flow_verticalGap="60dp"
            app:flow_verticalStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainMenuButton"
            android:text="@string/tables" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainMenuButton"
            android:text="@string/news" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainMenuButton"
            android:text="@string/statistics" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainMenuButton"
            android:text="@string/settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>